--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,15 +24,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   #cupertino_icons: ^0.1.2
 
-  flutter_map: any
+  flutter_map: ^0.14.0
     #git:
     #  url: https://github.com/johnpryan/flutter_map.git
-  latlong2: ^0.8.0
+  #latlong2: ^0.8.0
 
   flutter_map_dragmarker:
     git:
       url: https://github.com/ibrierley/flutter_map_dragmarker.git
-      ref: nullsafety
+      ref: panfix
 
 
 dev_dependencies:
