--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,9 +18,9 @@ dependencies:
   latlong2: ^0.8.0
 
 dev_dependencies:
+  flutter_lints: ">=1.0.4"
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
