--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,6 @@ dependencies:
   latlong2: ^0.8.0
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
+  flutter_lints: ">=1.0.4"
   flutter_test:
     sdk: flutter
