--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_map: ^0.14.0
-  flutter_map_dragmarker: ^1.0.0
+  flutter_map: ^1.0.0
+  flutter_map_dragmarker:
+    git:
+      url: https://github.com/pablojimpas/flutter_map_dragmarker
+      ref: bump-flutter_map-1.0.0
   latlong2: ^0.8.0
 
 dev_dependencies:
