--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,10 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map: ^1.0.0
-  flutter_map_dragmarker:
-    git:
-      url: https://github.com/pablojimpas/flutter_map_dragmarker
-      ref: bump-flutter_map-1.0.0
+  flutter_map_dragmarker: ^2.0.0
   flutter_map_line_editor:
     path: ../
   latlong2: ^0.8.0
