--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,10 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_map: ^0.14.0
-  flutter_map_dragmarker:
-    git:
-      url: https://github.com/ibrierley/flutter_map_dragmarker.git
+  flutter_map: ^1.0.0
+  flutter_map_dragmarker: ^2.0.0
   flutter_map_line_editor:
     path: ../
   latlong2: ^0.8.0
