--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,7 +1,7 @@
 name: example
 description: Example app showcasing usage of flutter_map_line_editor.
 publish_to: 'none'
-version: 3.0.0+beta.1
+version: 3.0.0-beta.1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
