--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_map_line_editor
 description: Line editor class for flutter_map
-version: 3.0.0+beta.1
+version: 3.0.0-beta.1
 repository: https://github.com/ibrierley/flutter_map_line_editor
 
 environment:
