--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,7 +1,7 @@
 name: example
 description: Example app showcasing usage of flutter_map_line_editor.
 publish_to: 'none'
-version: 3.0.0-beta.1
+version: 4.0.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -9,8 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_map: ^3.0.0-beta.1
-  flutter_map_dragmarker: ^4.0.0-beta.1
+  flutter_map: ^3.0.0
+  flutter_map_dragmarker: ^4.0.0
   flutter_map_line_editor:
     path: ../
   latlong2: ^0.8.0
