--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter_map: ^3.0.0
   flutter_map_line_editor:
     path: ../
-  latlong2: ^0.8.0
+  latlong2: ">=0.8.0"
 
 dev_dependencies:
   flutter_lints: ">=1.0.4"
