--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,7 +1,7 @@
 name: example
 description: Example app showcasing usage of flutter_map_line_editor.
 publish_to: 'none'
-version: 4.0.2
+version: 4.0.1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -12,7 +12,7 @@ dependencies:
   flutter_map: ^3.0.0
   flutter_map_line_editor:
     path: ../
-  latlong2: ">=0.8.0"
+  latlong2: ">=0.8.0 <0.9.0"
 
 dev_dependencies:
   flutter_lints: ">=1.0.4"
