--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_map_line_editor
 description: Line editor class for flutter_map
-version: 4.0.2
+version: 4.0.1
 repository: https://github.com/ibrierley/flutter_map_line_editor
 
 environment:
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
 
   flutter_map: ^3.0.0
-  latlong2: ">=0.8.0"
+  latlong2: ">=0.8.0 <0.9.0"
 
 dev_dependencies:
   flutter_lints: ">=1.0.4"
