--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,14 @@ version: 4.0.2
 repository: https://github.com/ibrierley/flutter_map_line_editor
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.18.0 <3.0.0"
+  flutter: ">=3.3.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  flutter_map: ^3.0.0
+  flutter_map: ">=3.0.0 <5.0.0"
   latlong2: ">=0.8.0 <0.9.0"
 
 dev_dependencies:
