--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_map_dragmarker:
     git:
       url: https://github.com/josxha/flutter_map_dragmarker.git
-      ref: master
+      ref: af4c7cc920e84d67412c0d4567a8ef109f1b8884
   latlong2: ">=0.8.0 <0.9.0"
   flutter_map_line_editor:
     path: ../
