--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_map_dragmarker:
     git:
       url: https://github.com/josxha/flutter_map_dragmarker.git
-      ref: master
+      ref: af4c7cc920e84d67412c0d4567a8ef109f1b8884
 
 dev_dependencies:
   flutter_lints: ">=1.0.4"
