--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,11 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map: ^4.0.0
-  # TODO use pub.dev version once released
-  flutter_map_dragmarker:
-    git:
-      url: https://github.com/josxha/flutter_map_dragmarker.git
-      ref: af4c7cc920e84d67412c0d4567a8ef109f1b8884
+  flutter_map_dragmarker: ^4.1.3
   latlong2: ">=0.8.0 <0.9.0"
   flutter_map_line_editor:
     path: ../
