--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,9 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_map: ^4.0.0
-  flutter_map_dragmarker: ^4.1.3
-  latlong2: ">=0.8.0 <0.9.0"
+  flutter_map: ">=4.0.0 <6.0.0"
+  flutter_map_dragmarker: ">=4.0.0 <6.0.0"
+  latlong2: ">=0.8.0 <0.10.0"
   flutter_map_line_editor:
     path: ../
 
