--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  latlong2: ">=0.8.0 <0.9.0"
-  flutter_map_dragmarker: ^4.1.3
+  latlong2: ">=0.8.0 <0.10.0"
+  flutter_map_dragmarker: ">=4.0.0 <6.0.0"
 
 dev_dependencies:
   flutter_lints: ">=1.0.4"
