--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_map_line_editor
-description: Line editor class for flutter_map
-version: 4.1.0
+description: A basic Line and Polygon editor for `flutter_map` using drag markers
+version: 5.0.0
 repository: https://github.com/ibrierley/flutter_map_line_editor
 
 environment:
@@ -10,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  latlong2: ">=0.8.0 <0.9.0"
-  flutter_map_dragmarker: ^4.1.3
+  latlong2: ">=0.8.0 <0.10.0"
+  flutter_map_dragmarker: ">=4.0.0 <6.0.0"
 
 dev_dependencies:
   flutter_lints: ">=1.0.4"
