--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
     sdk: flutter
   latlong2: ">=0.8.0 <0.10.0"
   flutter_map_dragmarker:
-    git: https://github.com/shrijanRegmi/flutter_map_dragmarker.git
+    git: 
+      url: https://github.com/shrijanRegmi/flutter_map_dragmarker.git
+      ref: flutter_map_v6
 
 dev_dependencies:
   flutter_lints: ">=1.0.4"
