--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
   latlong2: ">=0.8.0 <0.10.0"
-  flutter_map_dragmarker: ">=4.0.0 <6.0.0"
+  flutter_map_dragmarker:
+    git: 
+      url: https://github.com/shrijanRegmi/flutter_map_dragmarker.git
+      ref: flutter_map_v6
 
 dev_dependencies:
   flutter_lints: ">=1.0.4"
