--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,7 +1,7 @@
 name: example
 description: Example app showcasing usage of flutter_map_line_editor.
 publish_to: 'none'
-version: 5.0.0
+version: 6.0.0
 
 environment:
   sdk: ">=2.18.0 <4.0.0"
@@ -11,10 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map: ^6.0.0
-  flutter_map_dragmarker:
-    git: 
-      url: https://github.com/shrijanRegmi/flutter_map_dragmarker.git
-      ref: flutter_map_v6
+  flutter_map_dragmarker: ">=6.0.0 <7.0.0"
   latlong2: ">=0.8.0 <0.10.0"
   flutter_map_line_editor:
     path: ../
