--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_map_line_editor
 description: A basic Line and Polygon editor for `flutter_map` using drag markers
-version: 5.0.0
+version: 6.0.0
 repository: https://github.com/ibrierley/flutter_map_line_editor
 
 environment:
@@ -11,10 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   latlong2: ">=0.8.0 <0.10.0"
-  flutter_map_dragmarker:
-    git: 
-      url: https://github.com/shrijanRegmi/flutter_map_dragmarker.git
-      ref: flutter_map_v6
+  flutter_map_dragmarker: ">=6.0.0 <7.0.0"
 
 dev_dependencies:
   flutter_lints: ">=1.0.4"
